# chaser

./: Cargo.toml  README.md
UI/src/: Chaser UI _standalone_.html
docs/superpowers/plans/: 2026-05-29-offline-online-mode.md
docs/superpowers/specs/: 2026-05-29-offline-online-mode-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  ScreensSearch.tsx  ScreensSystem.tsx  api.ts  app.css  icons.tsx  types.ts
pdf-core/: Cargo.toml
pdf-core/src/: config.rs  lib.rs
pdf-core/src/extraction/: claude.rs  enrich.rs  gemini.rs  heuristic.rs  mod.rs  ocr.rs  offline.rs  ollama.rs  pdfium.rs  suggest.rs  table.rs
pdf-core/src/frontmatter/: filename.rs  mod.rs
pdf-core/src/schema/: mod.rs
pdf-core/src/search/: classify.rs  index.rs  intent.rs  keyword.rs  merge.rs  metadata.rs  mod.rs  router.rs  semantic.rs  structural.rs
pdf-lab/: Cargo.toml
pdf-lab/src/: main.rs
pdf-lab/src/cli/: config.rs  extract.rs  index.rs  mcp.rs  mod.rs  search.rs  serve.rs
