[package]
name = "pdf-core"
version = "0.1.0"
edition = "2024"

[dependencies]
pdfium-render = { version = "0.9", features = ["thread_safe", "image_latest"] }
image = "0.25"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
base64 = "0.22"
anyhow = "1"
regex = "1"
once_cell = "1"
ignore = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
fastembed = "4"
toml = "0.8"
# System dependency: brew install tesseract leptonica  (macOS)
#                   apt-get install libtesseract-dev libleptonica-dev tesseract-ocr  (Ubuntu)
tesseract = "0.14"
libc = "0.2"
